# musicleague

./: Makefile  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
dashboard/: app.js  index.html  styles.css
data/extracted/: business_casual01__rounds.csv  business_casual01__submissions.csv  business_casual01__votes.csv  business_casual02__rounds.csv  business_casual02__submissions.csv  business_casual02__votes.csv  business_casual03__rounds.csv  business_casual03__submissions.csv  business_casual03__votes.csv  business_casual04__rounds.csv  business_casual04__submissions.csv  business_casual04__votes.csv  business_casual05__rounds.csv  business_casual05__submissions.csv  business_casual05__votes.csv  season01__rounds.csv  season01__submissions.csv  season01__votes.csv  season02__rounds.csv  season02__submissions.csv  season02__votes.csv  season03__rounds.csv  season03__submissions.csv  season03__votes.csv  season04__rounds.csv  season04__submissions.csv  season04__votes.csv  season05__rounds.csv  season05__submissions.csv  season05__votes.csv  season06__rounds.csv  season06__submissions.csv  season06__votes.csv  season07__rounds.csv  season07__submissions.csv  season07__votes.csv  season08__competitors.csv  season08__rounds.csv  season08__submissions.csv  season08__votes.csv  (+6 more)
data/processed/: competitors.csv  rounds.csv  submissions.csv  submissions_enriched.csv  votes.csv
scripts/: build_dashboard_single_file.py  create_spotify_playlist.py  run_ingest_analysis.py
src/musicleague/: __init__.py  main.py  zip_ingest.py
tests/: test_main.py
